move the shared slides off static

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
 [submodule "static/shared-slides"]
-	path = static/shared-slides
+	path = shared-slides
 	url = https://github.com/DanySK/shared-slides.git
 [submodule "themes/reveal-hugo"]
 	path = themes/reveal-hugo
